Cpot Edit in React: Solid Colour Edit  - Componenents (loaded from separate files) are used for Zone for Edit Solid and Edit Range  - I have done 80% of the work in implemented Edit Solid  - fixed a bug in WgSmartInput (display numberic value truncated to required accuracy)

--- a/react-pgt/src/PaneColourPotsEdit.css
+++ b/react-pgt/src/PaneColourPotsEdit.css
@@ -243,9 +243,8 @@ height: 48px;
 }
 
 
-.PaneEditColourPots .controls.Zone .solid{
-    background: cyan;
-    width: 30px;
+.PaneEditColourPots .controls.Zone .editZone{
+    width: 191px;
     height: 376px;
 }
 
